--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,7 @@ content:
       - [IBM Mobile Thought Leader and Technical Evangelist](https://www.flickr.com/photos/15201803@N00/albums/72157697188449462)
       - [IBM Redbooks Author - Securing Your Mobile Business with IBM Worklight](https://play.google.com/store/books/details/Securing_Your_Mobile_Business_with_IBM_Worklight?id=qXvJAgAAQBAJ&gl=US)   
       - [IBM Redbook - Securing Your Mobile Business with IBM Worklight](https://books.google.ie/books?id=qXvJAgAAQBAJ)
+      - [O'Reilly - Securing Your Mobile Business with IBM Worklight](https://learning.oreilly.com/library/view/securing-your-mobile/073843888X/)
       - [Irish Government Blockchain Hackathon](https://www.youtube.com/watch?v=MRTzLKNPq14)      
       - [IBM Technical Rock Star for IBM Cloud](https://www.flickr.com/photos/15201803@N00/29191132794/in/photostream/)
       - [IBM Technical RockStar for IBM Cloud - FY 2016 x 4 times](https://www.flickr.com/photos/15201803@N00/34916035751/in/dateposted-public/)
@@ -98,6 +99,7 @@ content:
       - [WeAreDevelopers World Congress 2024 Berlin - Langchain4J - An Introduction for Impatient Developers](https://www.linkedin.com/feed/update/urn%3Ali%3Aactivity%3A7205856232060948480/) 
       - [WeAreDevelopers World Congress 2024 Berlin - Blazingly Fast GenAI App Development using Spring AI](https://www.instagram.com/p/C8B4RBWth1F/) 
       - [OpenSourceNorth 2024 - Saint Paul, MN - USA - Blazingly Fast GenAI App Development using Spring AI](https://www.opensourcenorth.com/)
+      - [OpenSourceNorth 2024 - Saint Paul, MN - USA - Blazingly Fast GenAI App Development using Spring AI](https://x.com/OpenSourceNorth/status/1781004908839211332)
       - [Michigan Technology Conference 2024 - Pontiac, MI - USA - Creating GenAI Apps in Java with SD4J (Stable Diffusion for Java) and the ONNX Runtime](https://www.mitechcon.org/)
       - [Build Stuff Lithuania 2024 - Blazingly Fast GenAI App Development Java and Spring AI](https://www.buildstuff.events/speakers)
       - [Build Stuff Lithuania 2024 - Blazingly Fast GenAI App Development Java and Spring AI](https://www.linkedin.com/posts/buildstuffconf_buildstuffconf-juarezjunior-oracle-activity-7251509877896859649-fKd_/)
@@ -137,6 +139,7 @@ content:
       - [Major League Hacking - Hacktoberfest Open-Source Edition - Hands-On Lab: A Java Microservice with GraalVM, Micronaut Data, JDK 17/21/22, and the Oracle Autonomous Database](https://news.mlh.io/mlh-partners-with-digitaloceans-10th-hacktoberfest-for-global-hack-week-open-source-09-01-2023)
       - [DUBJUG 2024 - Dublin, Ireland - Blazingly Fast GenAI App Development using Spring AI](https://ti.to/dublin-java-user-group/2024-oracles-juarez-barbosa-junior)
       - [DUBJUG 2024 - Dublin, Ireland - Creating a GenAI application by combining SD4J and the ONNX Runtime from Java](https://ti.to/dublin-java-user-group/2024-oracles-juarez-barbosa-junior)
+      - [Andersen Lab & Polish Java Community - Revolutionizing Java Database Development with Reactive and Virtual Threads](https://people.andersenlab.com/events/java-online-meetup-with-oracle)
       - [THAT Conference - Wisconsin Dells, USA](https://thatconference.com/tx/2024/)
       - [Porto Tech Hub Conference 2023 - Portugal - Revolutionize Java Database App Development with Reactive Streams and Java Virtual Threads](https://portotechhub.com/conference-2023/schedule/)
       - [Java Day at Andersen Lab - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads](https://www.linkedin.com/posts/andersenpeople_activity-7203324834355789824-E531)
@@ -198,6 +201,7 @@ content:
       - [Microsoft Webinar - Cybersecurity Day with Microsoft and Avanade](https://mktoevents.com/Microsoft+Event/308598/157-GQE-382)
       - [Test.js Summit - Talk - Microsoft Loves Javascript](https://twitter.com/TestJSSummit/status/1459308792785608707)      
       - [Microsoft TechX - Enterprise Blockchain Application Development using Azure Blockchain Service](https://www.microsoftevents.com/profile/web/index.cfm?PKwebID=0x1462051d571&varPage=agenda)
+      - [Microsoft TechX - Enterprise Blockchain Application Development using Azure Blockchain Service](https://x.com/mulliganr/status/1194256297438388224)
       - [Microsoft TechX - Highlights by Version 1](https://www.version1.com/nw-cld-maz-highlights-from-microsoft-techx-dublin/)
       - [Microsoft TechX - Event Report by Version 1](https://medium.com/version-1/a-day-at-microsoft-techx-dublin-28a7abb71c9c)
       - [Workshop - Blockchain on Azure for Developers](https://www.microsoftevents.com/profile/form/index.cfm?PKformID=0x9650633abcd)
@@ -284,6 +288,7 @@ content:
       - [A Guide to Migrating from HikariCP to Oracle UCP - Universal Connection Pool](https://juarezjunior.medium.com/a-guide-to-migrating-from-hikaricp-to-oracle-ucp-universal-connection-pool-e2f3fb6db2d5)            
       - [Straightforward Data Access with Jakarta Data and the Oracle Database](https://juarezjunior.medium.com/straightforward-data-access-with-jakarta-data-and-the-oracle-database-b789b99e4c9b)      
       - [DUBJUG - Simplify Data Access with Jakarta Data and Oracle Database - DUBJUG with Otavio Santana](https://www.youtube.com/watch?v=-ENghMK-c0c)
+      - [Oracle Labs - Creating GenAI Apps in Java with SD4J (Stable Diffusion for Java) and the ONNX Runtime](https://juarezjunior.medium.com/creating-genai-apps-in-java-with-sd4j-stable-diffusion-for-java-and-the-onnx-runtime-part-1-b72385c59329)
       - [Getting Started with Reactive Relational Database Connectivity and the Oracle R2DBC Driver](https://juarezjunior.medium.com/getting-started-with-r2dbc-reactive-relational-database-connectivity-and-the-oracle-r2dbc-driver-2c50ab1d9e66)
       - [Introduction to JDBC Reactive Extensions with the Oracle Database 23c Free — Developer Release](https://juarezjunior.medium.com/introduction-to-jdbc-reactive-extensions-with-the-oracle-database-23c-free-developer-release-b5a64ac5d194)      
       - [The new BOOLEAN data type in Oracle Database 23c with the Oracle JDBC drivers (23c, 21c) — JDBC type compatibility](https://medium.com/oracledevs/the-new-boolean-data-type-in-oracle-database-23c-with-the-oracle-jdbc-drivers-23c-21c-jdbc-f3252b200838)
