--- a/_config.yml
+++ b/_config.yml
@@ -47,22 +47,13 @@ additional_links:
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   
-  My name is Juarez Barbosa Junior, and I have over 20 years of professional experience in Software Engineering and Developer Relations.
-  I have held senior leadership roles in developer relations, developer ecosystem outreach, developer community management, business development and strategy, software and solutions engineering, collaboration with developer communities, startup founders, accelerators, incubators, mentors, venture capitalists, subject matter experts, and business partners.
+  My name is Juarez Barbosa Junior, and I have held senior leadership roles in software and solutions engineering, business development and strategy, developer relations, developer ecosystem outreach, developer community management, collaboration with developer communities, startup founders, accelerators, incubators, mentors, venture capitalists, subject matter experts, and business partners.
+
+  I have extensive experience with large enterprise systems and environments with companies like Oracle, Microsoft, IBM, Unisys, Nokia, Accenture, and a few medium-sized / startup initiatives (two as a founder). I have mastered presenting to both technical and non-technical audiences and engaging the C-Level in technology and business transformation journeys.
+
+  I was awarded as IBM Technical RockStar for Cloud, IBM Redbooks Thought Leader and Evangelist for IBM Mobile, and Nokia Developer Champion, as well as many additional awards, such as the IBM Manager’s Choice Award, Superior Community Service Contributions—Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development and Test Outstanding Contribution Awards, and IBM Mobile Enterprise Social Media Residency Outstanding Contributor. 
+
   
-  I am a Sr. Principal Java Developer Evangelist and Director of Developer Evangelism at Oracle. Previously, I was an Azure Developer Relations Lead – Director of Developer Relations at Microsoft.
-  In addition to that, I was a Principal Developer Advocate, Developer Advocacy Director at Oracle EMEA, and a Thought Leader and Technical Evangelist at IBM.
-     
-  I have experience engaging the C-Level in technology and business transformation journeys, aiming at explaining complex business and technology-related scenarios to technical and non-technical audiences.
-  From a technical standpoint, I am an expert in Java language, JDK, and JVMs (Java Virtual Machines). 
-  
-  I have extensive experience and knowledge in Cloud Computing (Oracle OCI, Azure, GCP, IBM Cloud, and AWS), DevOps, Infrastructure as Code (IaC), Continuous Integration / Delivery (CI/CD), and Cloud Native. Also, I am a polyglot Software Engineer with experience in Java, Kotlin, Golang, Python, C, C++, and Javascript, and lately, I have been learning Rust.
-  
-  I've also acted as a Mentor for Microsoft for Startups. IBM has nominated me as an IBM Technical Rock Star for Cloud, IBM Redbooks Thought Leader, Technical Evangelist for IBM Mobile, and Nokia Developer Champion. 
-  
-  I have received awards - IBM Manager Choice Award, Superior Community Service Contributions - Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development, Test Outstanding Contribution Awards, and IBM Mobile Enterprise Social Media Residency - Outstanding Contributor.
-  
-  Feel free to invite me to speak about Java, Microservices, Software Architecture, Solutions Architecture, DevOps, Cloud Computing (Oracle Cloud, Azure, AWS, GCP, IBM Cloud), Emerging Technologies (IoT, AI, Blockchain, XR), and Cybersecurity.
   
 content:
     
