--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ about_content: | # this will include new lines to allow paragraphs
   
   My name is Juarez Barbosa Junior, and I have held senior leadership roles in software and solutions engineering, business development and strategy, developer relations, developer ecosystem outreach, developer community management, collaboration with developer communities, startup founders, accelerators, incubators, mentors, venture capitalists, subject matter experts, and business partners.
 
-  I have extensive experience with large enterprise systems and environments with companies like Oracle, Microsoft, IBM, Unisys, Nokia, Accenture, and a few medium-sized / startup initiatives (two as a founder). I have mastered presenting to both technical and non-technical audiences and engaging the C-Level in technology and business transformation journeys.
+  I have extensive experience with large enterprise systems and environments with companies like Oracle, Microsoft, IBM, Unisys, Nokia, Accenture, and a few medium-sized companies and startups (two as a founder). I have mastered presenting to technical and non-technical audiences and engaging the C-Level in technology and business transformation journeys.
 
   I was awarded as IBM Technical RockStar for Cloud, IBM Redbooks Thought Leader and Evangelist for IBM Mobile, and Nokia Developer Champion, as well as many additional awards, such as the IBM Manager’s Choice Award, Superior Community Service Contributions—Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development and Test Outstanding Contribution Awards, and IBM Mobile Enterprise Social Media Residency Outstanding Contributor. 
 
