--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Juarez Barbosa Junior, MSc
-title: Software Engineering, Solutions Architecture, Developer Relations
+title: Solutions Architect / Software Architect / Developer Relations
 email: juarez.junior@outlook.ie
 website: https://juarezjuniorgithub.github.io/
 
