--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ content:
       - [Nokia Developer Champion - 2009 - 2010](https://www.flickr.com/photos/15201803@N00/8549646971/in/set-72157632977371930)      
  
   
-  - title: Technical Content - blog posts, code samples, slide decks, articles, workshops, hands-on labs
+  - title: Technical Content - blog posts, articles, workshops, labs, code samples, slide decks
     layout: text
     content: | # this will include new lines to allow paragraphs
       Java, Python, Golang, Javascript, Android
