--- a/_config.yml
+++ b/_config.yml
@@ -510,7 +510,7 @@ content:
       - layout: left
         title: Oracle
         link: developer.oracle.com        
-        sub_title: Sr. Principal Java Developer Evangelist, Director of Developer Evangelism
+        sub_title: Sr. Principal Developer Evangelist, Director of Developer Evangelism
         caption: August 2022 - Present
         quote: >
           https://www.oracle.com/
