--- a/_config.yml
+++ b/_config.yml
@@ -47,11 +47,15 @@ additional_links:
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   
-  My name is Juarez Barbosa Junior, and I have held senior leadership roles in software and solutions engineering, business development and strategy, developer relations, developer ecosystem outreach, developer community management, collaboration with developer communities, startup founders, accelerators, incubators, mentors, venture capitalists, subject matter experts, and business partners.
+  My name is Juarez Junior, and I have held senior leadership roles in software and solution architecture and developer relations. I have extensive experience with large enterprise systems and environments with companies like Oracle, Microsoft, IBM, Unisys, Nokia, Accenture, and a few medium-sized companies and startups (two as a founder). 
 
-  I have extensive experience with large enterprise systems and environments with companies like Oracle, Microsoft, IBM, Unisys, Nokia, Accenture, and a few medium-sized companies and startups (two as a founder). I have mastered presenting to technical and non-technical audiences and engaging the C-Level in technology and business transformation journeys.
+  I have extensive experience working with customers, business partners, subject matter experts, and decision-makers to influence decisions based on both business and technical requirements (functional / non-functional) and lead complex software solutions' design and implementation. I have mastered presenting to technical and non-technical audiences and engaging the C-Level in technology and business transformation journeys.
 
-  I was awarded as IBM Technical RockStar for Cloud, IBM Redbooks Thought Leader and Evangelist for IBM Mobile, and Nokia Developer Champion, as well as many additional awards, such as the IBM Manager’s Choice Award, Superior Community Service Contributions—Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development and Test Outstanding Contribution Awards, and IBM Mobile Enterprise Social Media Residency Outstanding Contributor. 
+  From a startup perspective, during my tenure at Microsoft, I participated as a mentor in the Microsoft for Startups program as part of its Founders Hub program.
+
+  Besides, I'm also skilled in developer relations, developer ecosystem outreach, and developer community management.
+
+  Last but not least, I have been awarded as IBM Technical RockStar for Cloud, IBM Redbooks Thought Leader and Evangelist for IBM Mobile, and Nokia Developer Champion, as well as many additional awards, such as the IBM Manager’s Choice Award, Superior Community Service Contributions—Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development and Test Outstanding Contribution Awards, and IBM Mobile Enterprise Social Media Residency Outstanding Contributor. 
 
   
   
