--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ additional_links:
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   
-  My name is Juarez Junior, and I have held senior leadership roles in software and solution architecture and developer relations. I have extensive experience with large enterprise systems and environments with companies like Oracle, Microsoft, IBM, Unisys, Nokia, Accenture, and a few medium-sized companies and startups (two as a founder). 
+  My name is Juarez Junior, and I have held senior leadership roles in software architecture, solution architecture and developer relations. I have extensive experience with large enterprise systems and environments with companies like Oracle, Microsoft, IBM, Unisys, Nokia, Accenture, and a few medium-sized companies and startups (two as a founder). 
 
   I have extensive experience working with customers, business partners, subject matter experts, and decision-makers to influence decisions based on both business and technical requirements (functional / non-functional) and lead complex software solutions' design and implementation. I have mastered presenting to technical and non-technical audiences and engaging the C-Level in technology and business transformation journeys.
 
