--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ version: 2
 # Personal info
 name: Juarez Barbosa Junior, MSc
 title: Solution Architect / Software Architect / Developer Advocate
-email: juarez.junior@outlook.ie
+email: juarez.barbosa@gmail.com
 website: https://juarezjuniorgithub.github.io/
 
 # Dark Mode (true/false/never)
