--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Juarez Barbosa Junior, MSc
-title: Solution Architect / Software Architect / Developer Advocate
+title: Software Architect/Engineer, Solution Architect, Developer Advocate
 email: juarez.barbosa@gmail.com
 website: https://juarezjuniorgithub.github.io/
 
