--- a/_config.yml
+++ b/_config.yml
@@ -346,8 +346,38 @@ content:
   - title: Talks
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Developer Relations - Presentations and Customer Engagements     
-      - [Sessionize - MOST ACTIVE SPEAKER - 2023 & 2024](https://sessionize.com/juarezjunior) 
+      Developer Relations - Presentations and Customer Engagements
+      - [JavaCro 2025 Closing Roundtable: The Future of Software Development, Java, AI and Beyond](https://2025.javacro.hr/eng/Lecture-evaluation)
+      - [JavaCro 2025 Opening Roundtable: Software Development in the Age of AI](https://www.linkedin.com/posts/lomagnette_javacro-java-javacro25-activity-7383401537026404352-B2dQ/)      
+      - [JavaCro 2025 - Rovinj, Croatia - Solving Complex Problems with AI Agents Design Patterns Using Spring AI](https://2025.javacro.hr/eng/Speakers)      
+      - [JavaCro 2025 - Rovinj, Croatia - Unleashing Vector Search with Hibernate and Oracle Database](https://2025.javacro.hr/eng/Speakers)
+      - [JavaCro 2025 - Rovinj, Croatia - Simplifying Data Access with Jakarta Data for Domain-Driven Design](https://2025.javacro.hr/eng/Speakers)
+      - [INIT Conf 2025 - Banja Luka, Bosnia and Herzegovina - Solving Complex Problems with AI Agents Design Patterns Using Spring AI](https://www.linkedin.com/feed/update/urn%3Ali%3Aactivity%3A7370731075255304192/)
+      - [OpenConf Greece 2025 - Athens, Greece - Unleash the Power of AI Agents with Java: Building Intelligent Applications with Quarkus, LangChain4, and the Oracle Database](https://www.instagram.com/p/DRUyeOKCCzb/)
+      - [Java Day Istanbul 2025 - Langchain4J - A Guide for Impatient Developers](https://x.com/javadayistanbul/status/1955977420453884284)
+      - [KCDC 2025 - Kansas City, USA - KaLangchain4J - An Introduction for Impatient Developers](https://www.kcdc.info/speakers)      
+      - [OpenSourceNorth 2025 - Saint Paul, MN, USA - Solving Complex Problems with AI Agents Design Patterns Using Spring AI](https://opensourcenorth.com/)
+      - [HrOUG 2025 - Rovinj, Croatia - Unleashing Oracle Power on GCP Your Guide to Provisioning an Autonomous Database Like A Pro](https://2025.hroug.hr/eng/Speakers)      
+      - [ServerlessDays Milano 2025 - Italy - Scalable Multicloud with Serverless Java: Building Scalable Solutions with OCI Functions and Oracle Database@AWS](https://milan.serverlessdays.io/)
+      - [TDC Sao Paulo 2025 - Brazil - Simplifying Data Access with Jakarta Data for Domain-Driven Design](https://thedevconf.com/tdc/2025/sao-paulo/trilha-arquitetura-java)      
+      - [TDC Sao Paulo 2025 - Brazil - Inteligência Autônoma: Construindo Aplicações GenAI com LangChain4J](https://thedevconf.com/tdc/2025/sao-paulo/workshops#panelDia2)
+      - [TDC Sao Paulo 2025 - Brazil - Oracle Labs: Dominando a extensão LangChain4J da Oracle para construção de aplicações de IA Generativa com Java](https://promo.thedevconf.com/sp25-oracle)      
+      - [TDC Florianopolis 2025 - Brazil - Roundtable: Java encontra GenAI: Codificação Vibe para o Desenvolvedor Moderno](https://www.linkedin.com/feed/update/urn:li:activity:7339377417821532162/)      
+      - [TDC Florianopolis 2025 - Brazil - Workshop: Langchain4J - Uma introdução para desenvolvedores impacientes](https://thedevconf.com/tdc/2025/florianopolis/workshops)   
+      - [TDC Florianopolis 2025 - Brazil - Instrumenting Java Database Applications with OpenTelemetry and Oracle JDBC - A Practical Guide](https://thedevconf.com/tdc/2025/florianopolis/trilha-sre-e-observabilidade)         
+      - [X-Ops Conference 2025 - Madrid, Spain - Automating Database CI/CD with Oracle DB Operator, GitHub Actions, and Liquibase](https://xopsconference.com/)
+      - [SOUJAVA - #CelebrationWeek for 30y of Java ONLINE - Powering Spring AI with Model Context Protocol Integration](https://soujava.github.io/java30y-celebration-week/#powering-spring-ai-with-model-context-protocol-integration)        
+      - [SOUJAVA - Meetup SouJava Junho 2025 - Sao Paulo - Brazil - Unleashing Vector Search with Hibernate and Oracle Database](https://www.youtube.com/watch?v=JlVJaj9p_Sg&t=685s)
+      - [Comunidade Brasil JUG - ONLINE - Busca Vetorial com Spring AI, LangChain4J, Hibernate Vector e o Oracle Database 23ai - pt-BR](https://www.linkedin.com/posts/devsjava_java-springboot-springai-activity-7357782999167287296-gnTs/)
+      - [HeapCon 2025 - Belgrade, Serbia - Unleashing Vector Search with Hibernate and Oracle Database](https://www.linkedin.com/posts/heapcon_heapcon2025-java-hibernate-activity-7355945627576414208-aZuY/)   
+      - [DOAG 2025 Conference + Exhibition - Nuremberg, Germany - Automating Database CI/CD with Oracle DB Operator, GitHub Actions, and Liquibase](https://my.doag.org/events/userconference/2025/agenda/agendaView.defaultView/#eventDay.all)      
+      - [AI Navigator 2025 - Nuremberg, Germany - Langchain4J - An Introduction for Impatient Developers](https://my.doag.org/events/userconference/2025/agenda/agendaView.defaultView/#eventDay.all)      
+      - [Devoxx Belgium 2025 - Antwerp, Belgium - Unleashing Vector Search with Spring AI, LangChain4J, Hibernate Vector, and the Oracle Database](https://m.devoxx.com/events/dvbe25/speakers)
+      - [DevConverge Europe - Madrid, Spain - Building Next-Gen AI Agents with LangChain4J and Oracle AI Vector Search](https://www.devconvergeeurope.com/)      
+      - [DebugTech - What I learned from working for Big Tech companies - pt-BR](https://www.linkedin.com/feed/update/urn:li:activity:7386831323388325888/)
+      - [ConTech by RoOUG 2025 - Bucharest, Romania - Instrumenting Java Database Applications with OpenTelemetry and Oracle JDBC - A Practical Guide](https://x.com/RoOUG1/status/1983528370983092525)      
+      - [Build Stuff Conference 2025 - Vilnius, Lithuania - Unleash the Power of AI Agents with Java: Quarkus, LangChain4](https://x.com/BuildStuffConf/status/1981284982740963428)
+      - [Sessionize - MOST ACTIVE SPEAKER - 2023 / 2024 / 2025](https://sessionize.com/juarezjunior) 
       - [WeAreDevelopers World Congress 2024 Berlin - Langchain4J - An Introduction for Impatient Developers](https://worldcongress.app.swapcard.com/event/wearedevelopers-world-congress-2024/planning/UGxhbm5pbmdfMjAwMjc2Ng%3D%3D) 
       - [WeAreDevelopers World Congress 2024 Berlin - Langchain4J - An Introduction for Impatient Developers](https://www.linkedin.com/feed/update/urn%3Ali%3Aactivity%3A7205856232060948480/) 
       - [WeAreDevelopers World Congress 2024 Berlin - Blazingly Fast GenAI App Development using Spring AI](https://www.instagram.com/p/C8B4RBWth1F/) 
